test/core/errors/alignment_error/zs/no_integer_alignment_error.zs
package no_integer_alignment_error;

struct NoIntegerAlignmentError
{
align("wrong"):
    int32 field;
};
